--- a/index.html
+++ b/index.html
@@ -9,5 +9,26 @@
 </head>
 <body>
   <h1>Hello World</h1>
+  <img class="bread" src="assets/images/fresh-bread.jpg" alt="a steamy loaf">
+  <img src="assets/images/butter.jpg" alt="creamy cartoon butter" class="butter">
+  <img src="./assets/images/jam.jpg" alt="just jam" class="jam">
+  <img src="./assets/images/jelly.png" alt="jelly donut" class="jelly">
+  <h2></h2>
+  <h3>Dear Other</h3>
+  <ul>
+    <li>
+      <a href="https://dearother.bandcamp.com/album/the-wizard-clip">Wizard Clip-album</a>
+    </li>
+    <li>
+      <a href="https://dearother.bandcamp.com/album/lift-love">Lift/ Love-album</a>
+    </li>
+    <li>
+      <a href="https://dearother.bandcamp.com/album/the-exitus-and-reditus-of-andrew-darkstar-parrish">Exitus and Reditus of Andrew Darkstar Parrish-album</a>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=G1oiLPFrvMA&ab_channel=DearOtherBand">2016 Tiny Desk Contest Submission</a>
+    </li>
+
+  </ul>
 </body>
 </html>
