--- a/index.html
+++ b/index.html
@@ -4,31 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link
+    id="favicon"
+    rel="icon"
+    href="assets/images/jelly.png"
+    type="image/png"
+    sizes="48x48"
+  >
   <link rel="stylesheet" href="style/style.css">
   <script type="module" src="./scripts/main.js"></script>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Bread, Butter, Jam, and Jelly</h1>
   <img class="bread" src="assets/images/fresh-bread.jpg" alt="a steamy loaf">
   <img src="assets/images/butter.jpg" alt="creamy cartoon butter" class="butter">
   <img src="./assets/images/jam.jpg" alt="just jam" class="jam">
   <img src="./assets/images/jelly.png" alt="jelly donut" class="jelly">
-  <h2></h2>
-  <h3>Dear Other</h3>
+  <h2>The Premiere Label of LaBelle</h2>
+  <h3></h3>
+  <h4>Dear Other</h4>
   <ul>
     <li>
-      <a href="https://dearother.bandcamp.com/album/the-wizard-clip">Wizard Clip-album</a>
+      SunnySides
     </li>
+    <ul>
+      <li>
+        <a href="https://dearother.bandcamp.com/album/the-wizard-clip">Wizard Clip</a>
+      </li>
+      <li>
+        <a href="https://dearother.bandcamp.com/album/lift-love">Lift/ Love</a>
+      </li>
+      <li>
+        <a href="https://dearother.bandcamp.com/album/the-exitus-and-reditus-of-andrew-darkstar-parrish">Exitus and Reditus of Andrew Darkstar Parrish</a>
+      </li>
+    </ul>
     <li>
-      <a href="https://dearother.bandcamp.com/album/lift-love">Lift/ Love-album</a>
+      SMC's
     </li>
-    <li>
-      <a href="https://dearother.bandcamp.com/album/the-exitus-and-reditus-of-andrew-darkstar-parrish">Exitus and Reditus of Andrew Darkstar Parrish-album</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=G1oiLPFrvMA&ab_channel=DearOtherBand">2016 Tiny Desk Contest Submission</a>
-    </li>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=G1oiLPFrvMA&ab_channel=DearOtherBand">2016 Tiny Desk Contest Submission</a>
+      </li>
+    </ul>
 
   </ul>
+  <h2>Glossary: Though it should be self evident</h2>
+  <ol>
+    <li>SunnySide- Album</li>
+    <li>Saturday Morning Cartoons or SMC- Video</li>
+  </ol>
 </body>
 </html>
