big button proof of concepts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script type="module" src="./scripts/main.js"></script>
 </head>
 <body>
+  <nav class="new-here">New Here? Click Here</nav>
   <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2030429628/size=small/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="https://donutsunday.bandcamp.com/track/you-will-know-them-by-their-fruits">you will know them by their Fruits by Donut Sunday</a></iframe>
   <h1>Bread, Butter, Jam, and Jelly</h1>
   <h4 class="intro">We are the bread that left your mom on read. We are the butter straight from the cow's utter. We are the jam made without a single yam. We are the jelly smeared accross a pregnant woman's belly. We are music, and we are acoustic. We are eclectic, and we are electric. We are not posers, so please stop asking.</h4>
@@ -55,5 +56,20 @@
     <li>SunnySide- Album</li>
     <li>Saturday Morning Cartoons or SMC- Video</li>
   </ol>
+  <table>
+    <tr>
+      <th class="table-cell">New Release</th>
+      <th class="table-cell">Band</th>
+      <th class="table-cell">Release Date</th>
+    </tr>
+    <tr>
+      <td class="table-cell">Tiny Bedroom Release #4</td>
+      <td class="table-cell">Tiny Bedroom</td>
+      <td class="table-cell">2018</td>
+    </tr>
+  </table>
+  <button class="big-button">
+    Look!
+  </button>
 </body>
 </html>
