--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
   <img src="assets/images/butter.jpg" alt="creamy cartoon butter" class="butter">
   <img src="./assets/images/jam.jpg" alt="just jam" class="jam">
   <img src="./assets/images/jelly.png" alt="jelly donut" class="jelly">
+  <div class="scroll-left"><p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam hic in odit fuga magni voluptatum illo dolore ex totam, nostrum beatae, quidem exercitationem, veniam aut laboriosam pariatur? Saepe, a.
+  </p></div>
+  <div class="scroll-right"><p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam hic in odit fuga magni voluptatum illo dolore ex totam, nostrum beatae, quidem exercitationem, veniam aut laboriosam pariatur? Saepe, a.
+  </p></div>
+  <div class="scroll-left"><p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam hic in odit fuga magni voluptatum illo dolore ex totam, nostrum beatae, quidem exercitationem, veniam aut laboriosam pariatur? Saepe, a.
+  </p></div>
   <h2>The Premiere Label of LaBelle</h2>
   <h3></h3>
   <h4>Dear Other</h4>
