--- a/index.html
+++ b/index.html
@@ -80,5 +80,10 @@
   <button class="big-button">
     Look!
   </button>
+  <br/>
+  <img src="./assets/images/adgif.gif" alt="">
+  <img src="./assets/images/addHug.gif" alt="">
+  <img src="./assets/images/adMJ.gif" alt="">
+  <img src="./assets/images/adPenguin.gif" alt="">
 </body>
 </html>
